# django-template

./: .env.template  .gitignore  Makefile  README.md  learning-notes.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
accounts/: forms.py  models.py  urls.py  views.py
accounts/management/commands/: create_user_profiles.py
accounts/migrations/: 0001_initial.py
apis/: urls.py  views.py
core/: __init__.py  celery.py  settings.py  urls.py
pages/: tests.py  views.py
parkings/: models.py  tasks.py  urls.py  views.py
parkings/management/commands/: import_parkinglots.py  setup_periodic_task.py  update_periodic_task.py
parkings/migrations/: 0001_initial.py
src/scripts/: input.js  maps.js
src/styles/: input.css
templates/accounts/: edit.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  register.html
templates/pages/: home.html
templates/parkings/: detail.html  index.html
templates/shared/: base.html  footer.html  header.html
