[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["chienchuanw <chienchuanwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
django-environ = "^0.12.0"
django-allauth = {extras = ["socialaccount"], version = "^65.3.1"}
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
requests = "^2.32.3"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
